# typst

./: .editorconfig  .envrc  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_LAYOUT_OVERVIEW.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  NOTICE  OLD_CITATION_FIX_HANDOFF.md  OLD_CITATION_INTROSPECTION_DEEP_DIVE.md  OLD_WRAP_IMPLEMENTATION_PLAN.md  PHASE1_LEARNINGS.md  README.md  WRAP_INTEGRATION_NOTES.md  WRAP_OVERVIEW.md  WRAP_PHASE_0.md  WRAP_PHASE_1.md  WRAP_PHASE_2.md  WRAP_PHASE_3.md  WRAP_PHASE_4.md  WRAP_PHASE_5.md  WRAP_PHASE_6.md  WRAP_RISK_REVIEW.md  WRAP_SESSION_NOTES.md  bacon.toml  build.rs  clippy.toml  compile_queue.md  dependabot.yml  docs.Dockerfile  fake-small-caps-test.typ  flake.nix  (+8 more)
bench/: Cargo.toml
bench/src/: bench.rs  clock.rs  parsing.rs
cli/: Cargo.toml  build.rs
cli/src/: args.rs  fonts.rs  main.rs  pandoc.rs  trace.rs  tracing.rs  watch.rs  world.rs
crates/typst/: Cargo.toml  build.rs  test.typ
crates/typst-assets/: Cargo.toml  build.rs
crates/typst-assets-macro/: Cargo.toml
crates/typst-assets-macro/src/: lib.rs
crates/typst-assets/files/: bad.toml  data.html  monday.json  works.bib  zoo.csv
crates/typst-assets/src/: blobs.rs  lib.rs  main.rs
crates/typst-bundle/: Cargo.toml
crates/typst-bundle/src/: export.rs  introspect.rs  lib.rs  link.rs
crates/typst-cli/: Cargo.toml  build.rs
crates/typst-cli/src/: args.rs  compile.rs  completions.rs  deps.rs  doctor.rs  download.rs  eval.rs  fonts.rs  greet.rs  info.rs  init.rs  lib.rs  main.rs  package.rs  packages.rs  query.rs  server.rs  terminal.rs  timings.rs  tracing.rs  update.rs  vendor.rs  watch.rs  world.rs
crates/typst-cli/tests/: smoke.rs
crates/typst-docs/: Cargo.toml
crates/typst-docs/src/: contribs.rs  html.rs  lib.rs  link.rs  main.rs  model.rs  templates.rs
crates/typst-docs/templates/: _layout.html  category.html  func.html  group.html  html.html  packages.html  symbols.html  type.html
crates/typst-eval/: Cargo.toml
crates/typst-eval/src/: access.rs  binding.rs  call.rs  code.rs  flow.rs  import.rs  lib.rs  markup.rs  math.rs  methods.rs  ops.rs  rules.rs  vm.rs
crates/typst-format/: Cargo.toml
crates/typst-format/src/: lib.rs  main.rs  output.rs  settings.rs  state.rs  styles.rs
crates/typst-html/: Cargo.toml
crates/typst-html/src/: attr.rs  charsets.rs  convert.rs  css.rs  document.rs  dom.rs  (+10 more)
crates/typst-ide/: Cargo.toml
crates/typst-kit/: Cargo.toml
crates/typst-layout/: Cargo.toml
crates/typst-library/: Cargo.toml  build.rs
crates/typst-loading/: Cargo.toml
crates/typst-macros/: Cargo.toml
crates/typst-pdf/: Cargo.toml  build.rs
crates/typst-realize/: Cargo.toml
crates/typst-render/: Cargo.toml
crates/typst-svg/: Cargo.toml
crates/typst-syntax/: Cargo.toml  README.md  build.rs
crates/typst-timing/: Cargo.toml
crates/typst-utils/: Cargo.toml  build.rs
docs/: Cargo.toml  Dockerfile  README.md  changelog.md  community.md  jsconfig.json  lib.typ  main.typ  nginx.conf  overview.md  roadmap.md  typst.toml
docs/assets/: base.css  docs.css  docs.js  index.typ
docs/changelog/: 0.1.0.md  0.10.0.md  0.11.0.md  0.11.1.md  0.12.0.md  0.13.0.md  0.13.1.md  0.14.0.md  0.14.1.md  0.14.2.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md  earlier.md  unreleased.md  welcome.md
docs/components/: base.typ  category.typ  example.typ  figure.typ  footnote.typ  index.typ  linking.typ  live.typ  nav.typ  pill.typ  preface.typ  reflect.typ  search.typ  section.typ  styling.typ  system.typ  table.typ
docs/content/: index.typ  overview.typ
docs/dev/: architecture.md  plugins.md  testmath.md
docs/guides/: accessibility.md  diagrams.md  guide-for-latex-users.md  guide-for-writing-plugins.md  page-setup.md  tables.md  welcome.md
docs/reference/: categories.yml  context.md  details.yml  groups.yaml  groups.yml  packages.md  scripting.md  styling.md  syntax.md  types.md  welcome.md
docs/src/: args.rs  contribs.rs  example.rs  html.rs  lib.rs  link.rs  live.rs  main.rs  model.rs  reflect.rs  search.rs  world.rs
docs/tutorial/: 1-writing.md  2-formatting.md  3-advanced.md  4-template.md  welcome.md
macros/: Cargo.toml
macros/src/: capability.rs  capable.rs  castable.rs  element.rs  func.rs  lib.rs  node.rs  symbols.rs  util.rs
tests/: .gitattributes  Cargo.toml  README.md  coma.typ  layout.rs  layouting.rs  parse.rs  render.py  skip.txt  stack.typ  test_typeset.rs  testit  typeset.rs
tests/benches/: tests.rs
tests/fuzz/: Cargo.toml
tests/layouter/: stack.typ  test.typ
tests/layouting/: lines.typ
tests/layouts/: align.typ  boxes.typ  coma.typ  pagebreaks.typ  shakespeare-right.tps  shakespeare.tpl  shakespeare.typ  stack.typ  styles.tps  styles.typ  test.typ
tests/parser/: tokens.rs  trees.rs
tests/parsing/: base.rs  tokens.rs  trees.rs
tests/regen/: Cargo.toml
tests/res/: bad.csv  bad.xml  data.xml  invalid-utf8.txt
tests/src/: args.rs  benches.rs  collect.rs  constants.rs  custom.rs  diff.css  diff.rs  git.rs  ide_tests.rs  layouter.rs  lib.rs  logger.rs  metadata.rs  notes.rs  output.rs  parser.rs  pdftags.rs  render.py  run.rs  spanless.rs  targets.rs  tests.rs  typeset.rs  world.rs
tests/suite/: playground.typ
tests/test/: exemple.json  main.typ  record.txt  template.typ
tests/typ/: arrays.typ  basics.typ  coma.typ  comments.typ  dictionaries.typ  escaping.typ  example-coma.typ  expand.typ  func-font-error.typ  func-font-fallback.typ  func-font-properties.typ  func-font.typ  func-h-and-v.typ  func-hv.typ  func-image-error.typ  func-image-fit.typ  func-image-formats.typ  func-image.typ  func-page-body.typ  func-page-dirs.typ  func-page-error.typ  func-page-metrics.typ  func-page.typ  func-pagebreak.typ  func-rgb.typ  h-and-v.typ  headings.typ  image-error.typ  image-fit.typ  image-formats.typ  image-jpeg.typ  image-png.typ  image.typ  page-body.typ  page-error.typ  page-metrics.typ  repr.typ  rgb.typ  spacing.typ  text.typ
tests/wrapper/: Cargo.toml
tools/codegen/: Cargo.toml
(+3581 files in other folders)
