[workspace]
members = ["crates/*", "docs", "tests", "tests/fuzz"]
default-members = ["crates/typst-cli"]
resolver = "2"

[workspace.package]
version = "0.13.1"
rust-version = "1.87" # also change in ci.yml
authors = ["The Typst Project Developers"]
edition = "2024"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
categories = ["compilers"]
keywords = ["typst"]
readme = "README.md"

[workspace.dependencies]
typst = { path = "crates/typst", version = "0.13.1" }
typst-cli = { path = "crates/typst-cli", version = "0.13.1" }
typst-eval = { path = "crates/typst-eval", version = "0.13.1" }
typst-html = { path = "crates/typst-html", version = "0.13.1" }
typst-ide = { path = "crates/typst-ide", version = "0.13.1" }
typst-kit = { path = "crates/typst-kit", version = "0.13.1" }
typst-layout = { path = "crates/typst-layout", version = "0.13.1" }
typst-library = { path = "crates/typst-library", version = "0.13.1" }
typst-macros = { path = "crates/typst-macros", version = "0.13.1" }
typst-pdf = { path = "crates/typst-pdf", version = "0.13.1" }
typst-realize = { path = "crates/typst-realize", version = "0.13.1" }
typst-render = { path = "crates/typst-render", version = "0.13.1" }
typst-svg = { path = "crates/typst-svg", version = "0.13.1" }
typst-syntax = { path = "crates/typst-syntax", version = "0.13.1" }
typst-timing = { path = "crates/typst-timing", version = "0.13.1" }
typst-utils = { path = "crates/typst-utils", version = "0.13.1" }
typst-assets = { git = "https://github.com/typst/typst-assets", rev = "c74e539" }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "fddbf8b" }
arrayvec = "0.7.6"
az = "1.2.1"
base64 = "0.22.1"
bitflags = { version = "2.9.1", features = ["serde"] }
bumpalo = { version = "3.18.1", features = ["boxed", "collections"] }
bytemuck = "1.23.1"
chinese-number = { version = "0.7.7", default-features = false, features = ["number-to-chinese"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
ciborium = "0.2.2"
clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.54"
clap_mangen = "0.2.27"
codespan-reporting = "0.12.0"
codex = { git = "https://github.com/typst/codex", rev = "56eb217" }
color-print = "0.3.7"
comemo = "0.4.0"
csv = "1"
ctrlc = "3.4.7"
dirs = "6.0.0"
ecow = { version = "0.2.5", features = ["serde"] }
env_proxy = "0.4.1"
fastrand = "2.3.0"
flate2 = "1"
fontdb = { version = "0.23", default-features = false }
fs_extra = "1.3.0"
glidesort = "0.1.2"
hayagriva = "0.8.1"
heck = "0.5.0"
hypher = "0.1.5"
icu_properties = { version = "1.5.1", features = ["serde"] }
icu_provider = { version = "1.5.0", features = ["sync"] }
icu_provider_adapters = "1.5.0"
icu_provider_blob = "1.5.0"
icu_segmenter = { version = "1.5.0", features = ["serde"] }
if_chain = "1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
indexmap = { version = "2", features = ["serde"] }
infer = { version = "0.19.0", default-features = false }
kamadak-exif = "0.6"
krilla = { version = "0.4.0", default-features = false, features = ["raster-images", "comemo", "rayon"] }
krilla-svg = "0.1.0"
kurbo = "0.11.2"
libfuzzer-sys = "0.4"
lipsum = "0.9"
memchr = "2.7.5"
native-tls = "0.2.14"
notify = "8"
once_cell = "1.21.3"
open = "5.0.1"
openssl = "0.10.73"
oxipng = { version = "9.1.5", default-features = false, features = ["filetime", "parallel", "zopfli"] }
palette = { version = "0.7.6", default-features = false, features = ["approx", "libm"] }
parking_lot = "0.12.4"
pathdiff = "0.2"
phf = { version = "0.11", features = ["macros"] }
pixglyph = "0.6"
png = "0.17"
portable-atomic = "1.11.1"
proc-macro2 = "1.0.95"
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
qcms = "0.3.0"
quote = "1.0.40"
rayon = "1.10.0"
regex = "1.11.1"
regex-syntax = "0.8"
resvg = { version = "0.45.1", default-features = false, features = ["raster-images"] }
roxmltree = "0.20"
rust_decimal = { version = "1.37.2", default-features = false, features = ["maths"] }
rustybuzz = "0.20.1"
same-file = "1"
self-replace = "1.3.7"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34-deprecated"
shell-escape = "0.1.5"
sigpipe = "0.1.3"
siphasher = "1.0.1"
smallvec = { version = "1.11.1", features = ["union", "const_generics", "const_new"] }
stacker = "0.1.21"
syn = { version = "2.0.103", features = ["full", "extra-traits"] }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy", "plist-load", "yaml-load"] }
tar = "0.4.44"
tempfile = "3.20.0"
thin-vec = "0.2.14"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tiny_http = "0.12.0"
tiny-skia = "0.11.4"
toml = { version = "0.8.23", default-features = false, features = ["parse", "display"] }
ttf-parser = "0.25.0"
two-face = { version = "0.4.3", default-features = false, features = ["syntect-fancy"] }
typed-arena = "2.0.2"
unicode-bidi = "0.3.18"
unicode-ident = "1.0.18"
unicode-math-class = "0.1.0"
unicode-script = "0.5.7"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
unscanny = "0.1.0"
ureq = { version = "2.12.1", default-features = false, features = ["native-tls", "gzip", "json"] }
usvg = { version = "0.45.1", default-features = false, features = ["text"] }
utf8_iter = "1.0.4"
walkdir = "2.5.0"
wasmi = "0.47.0"
web-sys = "0.3.77"
xmlparser = "0.13.6"
xmlwriter = "0.1.0"
xz2 = { version = "0.1.7", features = ["static"] }
yaml-front-matter = "0.1.0"
zip = { version = "4.1.0", default-features = false, features = ["deflate"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."typst-cli"]
strip = true

[workspace.lints.clippy]
blocks_in_conditions = "allow"
comparison_chain = "allow"
manual_range_contains = "allow"
mutable_key_type = "allow"
uninlined_format_args = "warn"
wildcard_in_or_patterns = "allow"
