[workspace]
members = ["crates/*", "docs", "tests", "tests/fuzz", "tests/wrapper"]
default-members = ["crates/typst-cli"]
resolver = "2"

[workspace.package]
version = "0.15.0"
rust-version = "1.92" # also change in ci.yml
authors = ["The Typst Project Developers"]
edition = "2024"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
categories = ["compilers"]
keywords = ["typst"]
readme = "README.md"

[workspace.dependencies]
typst = { path = "crates/typst", version = "0.15.0" }
typst-bundle = { path = "crates/typst-bundle", version = "0.15.0" }
typst-cli = { path = "crates/typst-cli", version = "0.15.0" }
typst-eval = { path = "crates/typst-eval", version = "0.15.0" }
typst-html = { path = "crates/typst-html", version = "0.15.0" }
typst-ide = { path = "crates/typst-ide", version = "0.15.0" }
typst-kit = { path = "crates/typst-kit", version = "0.15.0", default-features = false }
typst-layout = { path = "crates/typst-layout", version = "0.15.0" }
typst-library = { path = "crates/typst-library", version = "0.15.0" }
typst-macros = { path = "crates/typst-macros", version = "0.15.0" }
typst-pdf = { path = "crates/typst-pdf", version = "0.15.0" }
typst-realize = { path = "crates/typst-realize", version = "0.15.0" }
typst-render = { path = "crates/typst-render", version = "0.15.0" }
typst-svg = { path = "crates/typst-svg", version = "0.15.0" }
typst-syntax = { path = "crates/typst-syntax", version = "0.15.0" }
typst-timing = { path = "crates/typst-timing", version = "0.15.0" }
typst-utils = { path = "crates/typst-utils", version = "0.15.0" }
typst-assets = { git = "https://github.com/typst/typst-assets", rev = "74217e4" }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "a2e29ed" }
arrayvec = "0.7.4"
az = "1.2"
base64 = "0.22"
bitflags = { version = "2.10", features = ["serde"] }
bumpalo = { version = "3.15.4", features = ["boxed", "collections"] }
bytemuck = "1"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
ciborium = "0.2.1"
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.2.1"
clap_mangen = { version = "0.3.0", features = ["env"] }
codespan-reporting = "0.11"
codex = "0.3.0"
color-print = "0.3.6"
comemo = "0.5.1"
csv = "1"
ctrlc = "3.4.1"
dirs = "6"
ecow = { version = "0.2.6", features = ["serde"] }
either = "1"
env_proxy = "0.4"
fastrand = "2.3"
flate2 = { version = "1", features = ["zlib-rs"] }
fontdb = { version = "0.23", default-features = false }
fs_extra = "1.3"
glidesort = "0.1.2"
hayagriva = "0.10.1"
hayro = { version = "0.7.1", default-features = false }
hayro-svg = { version = "0.7.0", default-features = false }
hayro-syntax = "0.7.2"
heck = "0.5"
hypher = "0.1.4"
icu_properties = { version = "2.2.0", features = ["serde"] }
icu_provider = { version = "2.2.0", features = ["sync"] }
icu_provider_blob = "2.2.0"
icu_segmenter = { version = "2.2.0", features = ["serde"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
indexmap = { version = "2", features = ["serde", "rayon"] }
infer = { version = "0.19.0", default-features = false }
itoa = "1"
kamadak-exif = "0.6"
krilla = { version = "0.8.2", default-features = false, features = ["raster-images", "comemo", "rayon", "pdf"] }
krilla-svg = "0.8.1"
kurbo = "0.13"
libfuzzer-sys = "0.4"
libm = "0.2.11"
lipsum = "0.9"
memchr = "2"
moxcms = "0.8.1"
native-tls = "0.2"
notify = "8"
once_cell = "1"
open = "5.0.1"
openssl = "0.10.80"
oxipng = { version = "10", default-features = false, features = ["filetime", "parallel"] }
palette = { version = "0.7.3", default-features = false, features = ["approx", "libm"] }
parking_lot = "0.12.1"
pathdiff = "0.2"
percent-encoding = "2.3.2"
phf = { version = "0.13", features = ["macros"] }
pixglyph = "0.6.1"
png = "0.18"
portable-atomic = "1.6"
proc-macro2 = "1"
quote = "1"
rayon = "1.7.0"
regex = "1"
regex-syntax = "0.8"
resvg = { version = "0.47", default-features = false, features = ["raster-images"] }
roxmltree = "0.21"
rust_decimal = { version = "1.36.0", default-features = false, features = ["maths"] }
rustc-hash = "2.1"
rustybuzz = "0.20"
ryu = "1"
same-file = "1"
self-replace = "1.3.7"
semver = "1"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-escape = "0.1.5"
sigpipe = "0.1"
similar = { version = "3.1.0", features = ["inline", "unicode"] }
siphasher = "1"
smallvec = { version = "1.11.1", features = ["union", "const_generics", "const_new"] }
stacker = "0.1.19"
syn = { version = "2", features = ["full", "extra-traits"] }
syntect = { version = "5.3", default-features = false, features = ["parsing", "regex-fancy", "plist-load", "yaml-load"] }
tar = "0.4.46"
tempfile = "3.7.0"
thin-vec = "0.2.18"
time = { version = "0.3.20", features = ["formatting", "macros", "parsing"] }
tiny_http = "0.12"
tiny-skia = "0.12"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
ttf-parser = "0.25.0"
two-face = { version = "0.4.3", default-features = false, features = ["syntect-fancy"] }
typed-arena = "2"
unicode_names2 = "2"
unicode-bidi = "0.3.18"
unicode-ident = "1.0"
unicode-math-class = "0.1"
unicode-normalization = "0.1.24"
unicode-script = "0.5"
unicode-segmentation = "1"
unscanny = "0.1"
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip", "json"] }
url = "2.5"
usvg = { version = "0.47", default-features = false, features = ["text"] }
utf8_iter = "1.0.4"
walkdir = "2"
wasmi = { version = "1.0.9", default-features = false, features = ["simd"] }
web-sys = "0.3"
xmlwriter = "0.1.0"
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.dev.package."*"]
opt-level = 2

[profile.dev-fast]
inherits = "dev"
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."typst-cli"]
strip = true

[workspace.lints.clippy]
# See https://github.com/typst/typst/pull/6560#issuecomment-3045393640
derived_hash_with_manual_eq = "allow"
manual_is_multiple_of = "allow"
manual_range_contains = "allow"
mutable_key_type = "allow"
wildcard_in_or_patterns = "allow"

as_pointer_underscore = "warn"
as_underscore = "warn"
cloned_instead_of_copied = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
deref_by_slicing = "warn"
disallowed_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
ignored_unit_patterns = "warn"
inconsistent_struct_constructor = "warn"
iter_over_hash_type = "warn"
manual_is_variant_and = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
stable_sort_primitive = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_self_imports = "warn"
unnecessary_semicolon = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "warn"
