[package]
name = "typst-bench"
version = "0.0.1"
authors = ["The Typst Project Developers"]
edition = "2018"
publish = false

[features]
default = ["layout-cache"]
layout-cache = ["typst/layout-cache"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
typst = { path = "..", default-features = false, features = ["fs"] }

[[bench]]
name = "typst"
path = "src/bench.rs"
harness = false
