[package]
name = "typst-bench"
version = "0.0.1"
authors = ["The Typst Project Developers"]
edition = "2018"
publish = false

[features]
default = ["layout-cache"]
layout-cache = ["typst/layout-cache"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
iai = "0.1"
typst = { path = "..", default-features = false, features = ["fs"] }

[[bench]]
name = "clock"
path = "src/clock.rs"
harness = false

[[bench]]
name = "parsing"
path = "src/parsing.rs"
harness = false
