[package]
name = "typst-cli"
version = "0.1.0"
authors = ["The Typst Project Developers"]
edition = "2021"

[[bin]]
name = "typst"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = { path = ".." }
typst-library = { path = "../library" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codespan-reporting = "0.11"
comemo = "0.2"
dirs = "4"
elsa = "1.7"
memmap2 = "0.5"
notify = "5"
once_cell = "1"
same-file = "1"
siphasher = "0.3"
walkdir = "2"
clap = { version = "4.2.1", features = ["derive", "env"] }
open = "4.0.1"

[build-dependencies]
clap = { version = "4.2.1", features = ["derive", "string"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"

[features]
default = ["embed-fonts"]

# Embeds Typst's default fonts for
# - text (Linux Libertine),
# - math (New Computer Modern Math), and
# - code (Deja Vu Sans Mono)
# and additionally New Computer Modern for text
# into the binary.
embed-fonts = []
