[package]
name = "typst-cli"
version = "0.2.0"
authors = ["The Typst Project Developers"]
edition = "2021"
description = "The command line interface for Typst."
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
categories = ["compilers", "command-line-utilities"]
keywords = ["typst", "cli"]

[[bin]]
name = "typst"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
typst = { path = ".." }
typst-library = { path = "../library" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
codespan-reporting = "0.11"
comemo = "0.2"
dirs = "4"
elsa = "1.7"
memmap2 = "0.5"
notify = "5"
once_cell = "1"
same-file = "1"
siphasher = "0.3"
walkdir = "2"
clap = { version = "4.2.1", features = ["derive"] }
open = "4.0.1"

[build-dependencies]
clap = { version = "4.2.1", features = ["derive", "string"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"

[features]
default = ["embed-fonts"]

# Embeds some fonts into the binary:
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed-fonts = []
