[package]
name = "typst-macros"
version = "0.2.0"
authors = ["The Typst Project Developers"]
edition = "2021"
description = "Proc-macros for Typst."
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
keywords = ["typst"]

[lib]
proc-macro = true
test = false
doctest = false
bench = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
heck = "0.4"
