[package]
name = "typst-macros"
version = "0.3.0"
rust-version = "1.65"
authors = ["The Typst Project Developers"]
edition = "2021"
description = "Proc-macros for Typst."
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"
keywords = ["typst"]

[lib]
proc-macro = true
test = false
doctest = false
bench = false

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
