[package]
name = "typst-macros"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Proc-macros for Typst."
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true
test = false
doctest = false
bench = false

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
