[package]
name = "typst-tests"
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[[test]]
name = "tests"
path = "src/tests.rs"
harness = false

[dependencies]
typst-syntax = { workspace = true }
# Mark other Typst crates as optional so we can use '--no-default-features'
# to decrease compile times for parser testing.
typst = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }
typst-dev-assets = { workspace = true }
typst-html = { workspace = true }
typst-library = { workspace = true }
typst-pdf = { workspace = true }
typst-render = { workspace = true }
typst-svg = { workspace = true }
typst-utils = { workspace = true }
bitflags = { workspace = true }
clap = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
hayro-syntax = { workspace = true }
indexmap = { workspace = true }
oxipng = { workspace = true }
parking_lot = { workspace = true }
roxmltree = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde_yaml = { workspace = true }
tiny-skia = { workspace = true }
unscanny = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
